# vllm-ascend

./: run.sh
csrc/: build_aclnn.sh
csrc/apply_top_k_top_p/op_host/: CMakeLists.txt  apply_top_k_top_p_with_sorted_proto.cpp
csrc/apply_top_k_top_p_custom/op_host/: CMakeLists.txt  aclnn_apply_top_k_top_p_custom.cpp  aclnn_apply_top_k_top_p_custom.h  apply_top_k_top_p_custom.cpp  apply_top_k_top_p_custom.h  apply_top_k_top_p_custom_def.cpp  apply_top_k_top_p_custom_infershape.cpp  apply_top_k_top_p_custom_tiling.cpp  apply_top_k_top_p_custom_tiling.h  apply_top_k_top_p_with_sorted_custom_infershape.cpp  apply_top_k_top_p_with_sorted_def.cpp
docs/source/developer_guide/: MTP_second_forward_debug_logging.md
docs/source/developer_guide/feature_guide/: quantization.md
tests/: qwen3_next_mtp.py
tests/e2e/nightly/ops/: test_fused_moe.py
tests/ut/: test_platform.py
tests/ut/ops/: test_fused_moe.py
tests/ut/quantization/: test_quant_config.py  test_w4a16.py  test_w4a4_flatquant_dynamic.py  test_w8a8.py
vllm_ascend/: ascend_forward_context.py  platform.py
vllm_ascend/attention/: attention_v1.py  mla_v1.py  mlapo_strategy.py  sfa_v1.py
vllm_ascend/ops/: linear.py  linear_op.py
vllm_ascend/ops/fused_moe/: fused_moe.py
vllm_ascend/quantization/: __init__.py  compressed_tensors_config.py  config.py  model_mappings.py  modelslim_config.py  quant_config.py  utils.py  w4a16.py  w4a4_flatquant_dynamic.py  w4a8_dynamic.py  w8a16.py  w8a8.py  w8a8_dynamic.py  w8a8_pdmix.py  wrappers.py
vllm_ascend/quantization/compressed_tensors/: __init__.py  compressed_tensors.py
vllm_ascend/quantization/methods/: __init__.py  base.py  registry.py  w4a16.py  w4a4_flatquant.py  w4a8.py  w8a16.py  w8a8_dynamic.py  w8a8_mxfp8.py  w8a8_pdmix.py  w8a8_static.py
vllm_ascend/spec_decode/: eagle_proposer.py  mtp_proposer.py
vllm_ascend/worker/: model_runner_v1.py
